Add guacamole recipe and reorganize recipes as a list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
+    <ul>
+        <li>
+            <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
+        </li>
+        <li>
+            <a href="recipes/proteinshake.html">Post workout recovery shake</a>
+        </li>
+        <li>
+            <a href="recipes/guacamole.html">Guacamole</a>
+        </li>
+    </ul>
 </body>
 </html>
