Modify title and add image to homepage

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Recipes for people that can't cook</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/cantcook.jpg" alt="A guy using a drill to mix ingredients">
+
+    <h3>If you're like me and can't cook to save your life, here are some easy recipes that don't require any skill, but are still enjoyable!</h3>
+
+    <!-- Recipes -->
     <ul>
         <li>
             <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
