Add styling to homepage

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes for people that can't cook</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="images/cantcook.jpg" alt="A guy using a drill to mix ingredients">
+    <h1 class="main-title">Odin Recipes</h1>
+    <img src="images/cantcook.jpg" alt="A guy using a drill to mix ingredients" class="main-image">
 
-    <h3>If you're like me and can't cook to save your life, here are some easy recipes that don't require any skill, but are still enjoyable!</h3>
+    <h3 class="subheader">If you're like me and can't cook to save your life, here are some easy recipes that don't require any skill, but are still enjoyable!</h3>
 
     <!-- Recipes -->
-    <ul>
-        <li>
+    <ul class="recipe-list">
+        <li class="recipe">
             <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
         </li>
-        <li>
+        <li class="recipe">
             <a href="recipes/proteinshake.html">Post workout recovery shake</a>
         </li>
-        <li>
+        <li class="recipe">
             <a href="recipes/guacamole.html">Guacamole</a>
         </li>
     </ul>
