Add styling to pizza recipe. Edit style.css with more generalized classes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h3 class="subheader">If you're like me and can't cook to save your life, here are some easy recipes that don't require any skill, but are still enjoyable!</h3>
 
     <!-- Recipes -->
-    <ul class="recipe-list">
-        <li class="recipe">
+    <ul class="list">
+        <li class="list-item">
             <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
         </li>
-        <li class="recipe">
+        <li class="list-item">
             <a href="recipes/proteinshake.html">Post workout recovery shake</a>
         </li>
-        <li class="recipe">
+        <li class="list-item">
             <a href="recipes/guacamole.html">Guacamole</a>
         </li>
     </ul>
