--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,25 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>I can't believe it's not pizza!</title>
 </head>
 <body>
-    <h1>I can't believe it's not pizza!</h1>
+    <h1 class="recipe-title">I can't believe it's not pizza!</h1>
     <img src="../images/pizza.jpg" alt="A photo of the white bread pizza" width="300px" height="400px">
-    <h3>This is not pizza. It's bread with ketchup and cheese on it. But it does the trick when you're short on time or ingredients.</h3>
+    <h3 class="subheader">This is not pizza. It's bread with ketchup and cheese on it. But it does the trick when you're short on time or ingredients.</h3>
     <h4>Ingredients:</h4>
-    <ul>
-        <li>2-3 slices of white bread</li>
-        <li>1tbsp of ketchup for each slice</li>
-        <li>~1/3 cup of shredded cheese for each slice</li>
-        <li><em>Optional: dried oregano and olive oil</em></li>
+    <ul class="unordered-list">
+        <li class="list-item">2-3 slices of white bread</li>
+        <li class="list-item">1tbsp of ketchup for each slice</li>
+        <li class="list-item">~1/3 cup of shredded cheese for each slice</li>
+        <li class="list-item"><em>Optional: dried oregano and olive oil</em></li>
     </ul>
     <h4>Steps:</h4>
-    <ol>
-        <li>Spread the ketchup evenly on each slice</li>
-        <li>Portion and place the cheese evenly on each slice</li>
-        <li><em>Optional: sprinkle the oregano and add a drizzle of olive oil to improve the taste</em></li>
-        <li>Bake on an oven or air fryer for 10-15 minutes on high heat</li>
+    <ol class="ordered-list">
+        <li class="list-item">Spread the ketchup evenly on each slice</li>
+        <li class="list-item">Portion and place the cheese evenly on each slice</li>
+        <li class="list-item"><em>Optional: sprinkle the oregano and add a drizzle of olive oil to improve the taste</em></li>
+        <li class="list-item">Bake on an oven or air fryer for 10-15 minutes on high heat</li>
     </ol>
 </body>
 </html>
