Add styling to recipes/proteinshake.html

--- a/recipes/proteinshake.html
+++ b/recipes/proteinshake.html
@@ -2,27 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Post workout recovery shake</title>
 </head>
 <body>
-    <h1>Post workout recovery shake</h1>
+    <h1 class="recipe-title">Post workout recovery shake</h1>
     <img src="../images/proteinshake.jpeg" alt="A photo of a protein shake" width="300px" height="400px">
-    <h3>A very simple, yet very tasty and effective post workout meal.</h3>
+    <h3 class="subheader">A very simple, yet very tasty and effective post workout meal.</h3>
     <h4>Ingredients:</h4>
-    <ul>
-        <li>200ml of whole milk</li>
-        <li>200ml of water</li>
-        <li>30g of your preferred protein powder</li>
-        <li>1 medium banana</li>
-        <li>5 almonds</li>
-        <li><em>Optional: a sprinkle of cinnamon powder</em></li>
+    <ul class="unordered-list">
+        <li class="list-item">200ml of whole milk</li>
+        <li class="list-item">200ml of water</li>
+        <li class="list-item">30g of your preferred protein powder</li>
+        <li class="list-item">1 medium banana</li>
+        <li class="list-item">5 almonds</li>
+        <li class="list-item"><em>Optional: a sprinkle of cinnamon powder</em></li>
     </ul>
     <h4>Steps:</h4>
-    <ol>
-        <li>Place the liquid ingredients on a blender, followed by the dry ingredients</li>
-        <li>Cut the banana into manageable pieces before blending</li>
-        <li>Blend until everyting becomes smooth and consitent</li>
-        <li>Serve on a large cup</li>
+    <ol class="ordered-list">
+        <li class="list-item">Place the liquid ingredients on a blender, followed by the dry ingredients</li>
+        <li class="list-item">Cut the banana into manageable pieces before blending</li>
+        <li class="list-item">Blend until everyting becomes smooth and consitent</li>
+        <li class="list-item">Serve on a large cup</li>
     </ol>
 </body>
 </html>
