Add styling to recipes/guacamole.html

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Guacamole</title>
 </head>
 <body>
-    <h1>Guacamole</h1>
+    <h1 class="recipe-title">Guacamole</h1>
     <img src="../images/guacamole.webp" alt="A photo of the guacamole in a bowl" width="400px" height="300px">
-    <h3>A very basic, but delicious guacamole recipe. Best enjoyed with corn chips.</h3>
+    <h3 class="subheader">A very basic, but delicious guacamole recipe. Best enjoyed with corn chips.</h3>
     <h4>Ingredients:</h4>
-    <ul>
-        <li>2 avocados</li>
-        <li>1/4 medium onion</li>
-        <li>1 small tomato</li>
-        <li>1 lime</li>
-        <li>Fresh cilantro</li>
+    <ul class="unordered-list">
+        <li class="list-item">2 avocados</li>
+        <li class="list-item">1/4 medium onion</li>
+        <li class="list-item">1 small tomato</li>
+        <li class="list-item">1 lime</li>
+        <li class="list-item">Fresh cilantro</li>
     </ul>
     <h4>Steps:</h4>
-    <ol>
-        <li>Cut the avocados in half, open them and place the pulp in a bowl.</li>
-        <li>Mash the avocados, add lime juice, mix and mash some more.</li>
-        <li>Mince the cilantro, tomato and onion and add them to the avocado mix.</li>
-        <li>Add salt and black pepper to taste and mix thoroughly.</li>
+    <ol class="ordered-list">
+        <li class="list-item">Cut the avocados in half, open them and place the pulp in a bowl.</li>
+        <li class="list-item">Mash the avocados, add lime juice, mix and mash some more.</li>
+        <li class="list-item">Mince the cilantro, tomato and onion and add them to the avocado mix.</li>
+        <li class="list-item">Add salt and black pepper to taste and mix thoroughly.</li>
     </ol>
 </body>
 </html>
