Fix bulletpoint issue in the homepage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3 class="subheader">If you're like me and can't cook to save your life, here are some easy recipes that don't require any skill, but are still enjoyable!</h3>
 
     <!-- Recipes -->
-    <ul class="list">
+    <ul class="unordered-list">
         <li class="list-item">
             <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
         </li>
