Add _blank property to recipes in homepage

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <!-- Recipes -->
     <ul class="unordered-list">
         <li class="list-item">
-            <a href="recipes/pizza.html">I can't believe it's not pizza!</a>
+            <a href="recipes/pizza.html" target="_blank">I can't believe it's not pizza!</a>
         </li>
         <li class="list-item">
-            <a href="recipes/proteinshake.html">Post workout recovery shake</a>
+            <a href="recipes/proteinshake.html" target="_blank">Post workout recovery shake</a>
         </li>
         <li class="list-item">
-            <a href="recipes/guacamole.html">Guacamole</a>
+            <a href="recipes/guacamole.html" target="_blank">Guacamole</a>
         </li>
     </ul>
 </body>
